Creates ClassVisitor service
Implements a ClassVisitor service using JavaParser to traverse and extract information from class declarations.

This service populates a ClassInstance with details such as:
- Java file type
- Annotations and layer
- Inheritance
- Members (methods, statements, variables, constructors)
- Inner classes
- Used classes
- Lines of code

It also introduces a utility to extract class names, including generics, from a type string.